hphp/hack/test/typecheck/fc_enum_10.php.rust_elab.exp
File "fc_enum_10.php", line 3, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
